git ignore my locals

--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,9 @@ modules.xml
 
 
 # End of https://www.gitignore.io/api/intellij+iml
+
+\.idea/codeStyles/Project\.xml
+
+\.idea/compiler\.xml
+
+\.idea/vcs\.xml
